# gen3config

./: .pre-commit-config.yaml  .secexclude  .secrets.baseline  .travis.yml  Pipfile  README.md  pyproject.toml  release_notes.sh  setup.py
.github/workflows/: ci.yaml  pypi.yaml
gen3config/: __init__.py  config.py
tests/: test_config.py
tests/actual_cfg/: some-config.yaml
tests/default_cfgs/: default-config.yaml  default-template-config.yaml
tests/invalid_template_cfg/: template-config.yaml
tests/template_cfg/: template-config.yaml
